<resources>

    <string name="app_name">SimpleProgressBarActivity</string>
    <string name="event_set">Set an Event</string>
    <string name="menu_set">Show Menu Styles</string>
    <string name="event_des">Event Description</string>
    <string name="contacts_label">Contacts Activity</string>
    <string name="existing_msg">Your contact list has been updated</string>
    <string name="new_msg">Contact created successfully</string>
    <string name="menu_des">MenuStyle Activity</string>
    <string name="stream">Enter Your Stream</string>
    <string name="date">Set Date</string>
    <string name="time">Set Time</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_msg">You have set no event</string>
    <string name="show_msg">Event Set is Successful</string>
    <string name="value">Updated event is :</string>
    <string name="null_msg">Don\'t leave any of the fields empty</string>
    <string name="name_hint">Enter Name!</string>
    <string name="phn_hint">Enter PhoneNumber!</string>
    <string name="add_contacts">Add To Contacts</string>
    <string name="update_contacts">Update Contacts</string>
    <string name="existing_contacts">To Existing Contacts</string>
    <string name="new_contacts">Add New Contact</string>
    <string name="call">Call</string>
      <string name="calling">Calling....</string>
    <string name="sms">SMS</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="display_msg">You have selected </string>
    <string name="baterry">Baterry Updater</string>
    <string name="data_pack">Data Connection</string>
    <string name="profile">Profile</string>
    <string name="wifi">wifi</string>
    <string name="gps">GPS</string>
    <string name="event_name">Enter Your EventName!</string>

</resources>