<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/blue" 
    >
    
    <EditText android:id="@+id/name_edt"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="@string/name_hint"/>
    
    
     <EditText android:id="@+id/phn_edt"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="@string/phn_hint"/>
     
     
     <Button android:id="@+id/add_btn"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         android:text="@string/add_contacts"
         android:padding="20dp"/>
    
    
        
     
  

</LinearLayout>
